# vayuayan

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  formatting.yml  gh-pages.yml  publish.yml
docs/: Makefile  api_reference.rst  cli_reference.rst  conf.py  contributing.rst  examples.rst  history.rst  index.rst  installation.rst  notebooks.rst  quickstart.rst
docs/_static/css/: custom.css
docs/_templates/sidebar/: versions.html
docs/api/: vayuayan.rst
docs/notebooks/: 01_getting_started.ipynb  02_historical_data_analysis.ipynb  03_live_monitoring.ipynb  04_pm25_regional_analysis.ipynb  README.md
vayuayan/: __init__.py  __main__.py  air_quality_client.py  cli.py  client.py  commands.py  constants.py  exceptions.py  utils.py
