[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vayuayan"
version = "0.1.0"
description = "Package for fetching and analyzing air quality data from multiple sources"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mahesh Kumar Prajapat", email = "22b0433@iitb.ac.in"},
    {name = "Saket Choudhary", email = "saketc@iitb.ac.in"}
]
maintainers = [
    {name = "Mahesh Kumar Prajapat", email = "22b0433@iitb.ac.in"},
    {name = "Saket Choudhary", email = "saketc@iitb.ac.in"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "openpyxl==3.1.5",
    "urllib3>=1.26.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "rioxarray>=0.15.0",
    "xarray>=2024.7.0",
    "netCDF4>=1.7.2",
    "tqdm>=4.62.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
docs = [
    "myst-nb>=1.3.0",
    "sphinx>=8.2.3",
    "furo>=2024.8.6",
    "sphinx-multiversion>=0.2.4",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/saketlab/vayuayan"
Repository = "https://github.com/saketlab/vayuayan.git"
Documentation = "https://vayuayan.readthedocs.io/"
"Bug Tracker" = "https://github.com/saketlab/vayuayan/issues"

[project.scripts]
vayuayan = "vayuayan.cli:main"

[tool.setuptools]
packages = ["vayuayan"]

[tool.setuptools.package-data]
vayuayan = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "bs4.*",
    "pandas.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "geopy.*",
    "requests.*",
    "tqdm.*",
    "xarray.*",
    "rioxarray.*",
]
ignore_missing_imports = true
